# Voice-Audio-Segmentation

./: .env.segmentation.defaults  README.md  pyproject.toml
src/segmentation/: __init__.py  exceptions.py  segmenter.py
src/segmentation/io/: segment_writer.py
src/segmentation/logging/: __init__.py  config.py  format.py  logger.py
src/segmentation/path/: output_path_builder.py
src/segmentation/settings/: __init__.py  audio.py  base.py  duration.py  file.py  logging.py  root.py
src/segmentation/settings/implementations/: silence.py
src/segmentation/strategy/: base.py
src/segmentation/strategy/implementations/: __init__.py
src/segmentation/strategy/implementations/silence/: __init__.py  strategy.py
src/segmentation/utilities/: filename_formatter.py  manifest_builder.py  output_path_builder.py  validators.py
src/segmentation/utilities/io/: audio_loader.py  segment_writer.py
src/segmentation/utilities/math/: time_conversion.py
src/segmentation/utils/: time_conversion.py
