[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-audio-segmentation"
version = "0.1.0"
description = "A project that holds many strategies for segmenting audio files in speech pauses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "soundfile>=0.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/segmentation"]

[tool.hatch.build.targets.sdist]
include = ["src/segmentation"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
